@@ -25,7 +25,7 @@ jobs:
         cd $HOME/work/openturns
         git clone https://github.com/jeromerobert/hmat-oss.git hmat-oss
         cd hmat-oss/ 
-        git checkout 1.6.1
+        git checkout 1.7.1 
         cmake -DBUILD_EXAMPLES=OFF -DCBLAS_INCLUDE_DIR=/usr/local/opt/openblas/include -DCMAKE_MACOSX_RPATH=ON .
         make install -j3
     - run: |
